--- a/project3/css/style.css
+++ b/project3/css/style.css
@@ -12,6 +12,9 @@ body{
     width: 100%;
 }
 
+.works{
+  background-color: rgb(243, 246, 249);
+}
 
 ul {
   list-style: none;
@@ -45,6 +48,13 @@ nav a:hover {
   position: fixed;
 }
 
+.columndetailbox1{
+  padding:50px 40px 60px 40px;
+  width: 25%;
+  position: relative;
+  z-index: -1;
+}
+
 .date{
   position: fixed;
   font-weight: 500;
@@ -59,6 +69,34 @@ nav a:hover {
   padding-left: 0px;
   width: 65%;
   padding-bottom: 100px;
+}
+
+.block{
+  margin-bottom: 10px;
+  width: 100%;
+  height: 5px;
+  background-color: black;
+}
+
+.columndetailpic1{
+  margin-left: 25%;
+  margin-top: -90px;
+  padding-left: 0px;
+  width: 65%;
+}
+
+.columndetailpic2{
+  margin-left: 25%;
+  margin-top: -90px;
+  padding-left: 0px;
+  width: 65%;
+  padding-bottom: 150px;
+}
+
+.detailpic6{
+  margin: 0px 20px 20px 0px;
+  float: left;
+  height: 180px;
 }
 
 .detailpic3{
@@ -152,7 +190,14 @@ header{
   z-index: -2;
   padding-top: 166px;
   margin: 0px;
-  background-color: rgb(243, 246, 249);;
+  background-color: rgb(243, 246, 249);
+}
+
+.containersub1{
+  width: 100%;
+  z-index: -2;
+  padding-top: 166px;
+  margin: 0px;
 }
 
 .wrap a {
@@ -188,6 +233,11 @@ header{
   position: relative;
   top: 280px;
   z-index: -1;
+}
+
+.detailpic6:hover{
+  opacity: 0.3;
+  transition: all 0.3s ease-in;
 }
 
 .wrap img:hover{
