--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,12 +24,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .menu-icon{
     width: 30px;
     float: right;
-    margin-top:15px;
+    margin-top:22px;
     margin-right: 30px;
 }
 
-.menu hr{
-    width: 20px;
+.menu-icon div{
+    background-color: #292929;
+    height: 2px;
+    width: 25px;
+    margin-top: 5px;
 }
 
 .menu{ 
@@ -40,12 +43,13 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 .menu li{
-    line-height: 20px;
+    display: none;
+    margin-right: -200px;
+    line-height: 25px;
     font-family: 'raleway', sans-serif;
-    font-size: 13px;
+    font-size: 10px;
     padding: 0 10px 0 10px;
     list-style: none;
-    display: inline-block;
 }
 
 .menu li a{
@@ -54,11 +58,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .menu li.now{
     font-weight: 600;
-}
-}
-
-.left{
-    margin-top: -4px;
 }
 
 .split-slideshow{
@@ -83,10 +82,13 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     overflow: hidden;
 }
 
-.slider{
-    width: 100%;
-    height: 100%;
-    z-index: -2;
+.homeimg{
+    position: absolute;
+    z-index: 999;
+    right: 35%;
+    top: 30%;
+    margin-left: 10%;
+    height: 40%;;
 }
 
 .slideshow-text{
@@ -112,21 +114,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     -0-transform: rotate(90deg);
 }
 
-.project{
+.text{
     position: relative;
-    z-index: 99;
+    z-index: 998;
     line-height: 100vh;
     margin-top:-85px;
-    background-color: #B0FDFF; 
-}
-
-.homeimg{
-    position: absolute;
-    z-index: 100;
-    margin-top: 85px;
-    left: 25vw;
-    top: 22vh;
-    width: 500px;
 }
 
 .catalog{
@@ -198,11 +190,45 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border-color: transparent transparent transparent #292929;
 }
 
+.dots{
+    position: absolute;
+    bottom: 115px;
+    left: 50%;
+}
+
+.dot {
+    cursor: pointer;
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: #292929;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
 /*Animations*/
 
-.project h1:hover{
+.text:hover{
     transition: text-shadow .3s ease;
     text-shadow: 0 10px 30px rgba(0,0,0,0.05);
+}
+
+.fade{
+    -webkit-animation-name: fade;
+    -webkit-animation-duration:1.5s;
+    animation-name: fade;
+    animation-duration:1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
 }
 
 /*Typograohy*/
