--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -69,7 +69,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .slideshow{
     position: absolute;
-    z-index: -3;
+    z-index: -2;
     top: 0px;
     left: 0px;
     box-sizing: border-box;
@@ -82,9 +82,14 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     overflow: hidden;
 }
 
+.project{
+    position:relative;
+    z-index: -1;
+}
+
 .homeimg{
     position: absolute;
-    z-index: 999;
+    z-index: 100;
     right: 35%;
     top: 30%;
     margin-left: 10%;
@@ -94,6 +99,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .slideshow-text{
     margin-top: 100px;
     width: 200px;
+    height: 350px;
+    overflow: hidden;
 }
 
 .filters{
@@ -116,7 +123,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .text{
     position: relative;
-    z-index: 998;
+    z-index: 99;
     line-height: 100vh;
     margin-top:-85px;
 }
@@ -197,6 +204,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 .dot {
+    opacity: 0.3;
     cursor: pointer;
     height: 13px;
     width: 13px;
@@ -229,6 +237,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
+}
+
+.active, .dot:hover{
+    opacity: 1;
 }
 
 /*Typograohy*/
