--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -99,8 +99,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .slideshow-text{
     margin-top: 100px;
     width: 200px;
-    height: 350px;
-    overflow: hidden;
+    transform: (-50%, -50%);
 }
 
 .filters{
@@ -113,7 +112,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     position: absolute;
     text-align: center;
     top: 49%;
-    right: -10px;
+    right: -105px;
     transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -222,21 +221,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     text-shadow: 0 10px 30px rgba(0,0,0,0.05);
 }
 
-.fade{
-    -webkit-animation-name: fade;
-    -webkit-animation-duration:1.5s;
-    animation-name: fade;
-    animation-duration:1.5s;
+.slide{
+    -webkit-animation: slide 0.5s forwords;
+    animation: slide 0.5s forwords;
 }
 
-@-webkit-keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+@-webkit-keyframes slide {
+    100% {left: 0;}
 }
 
-@keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
+@keyframes slide {
+    100% {left: 0;}
 }
 
 .active, .dot:hover{
