--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -90,10 +90,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .homeimg{
     position: absolute;
     z-index: 100;
-    right: 35%;
-    top: 30%;
-    margin-left: 10%;
-    height: 40%;;
+    right: 50%;
+    top: 50%;
+    margin-right: -18%;
+    margin-top: -15%;
+    width: 40%;;
 }
 
 .slideshow-text{
