--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -159,15 +159,21 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     opacity: .07;
 }
 
-.catalog .catalog-click{
-    background-color: #292929;    
+.catalog-click::before{
+    position: relative;
+    bottom: 25px;
+    right: -25px;
+    content: "";
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent transparent #292929 transparent;
 }
 
-.catalog .catalog-click::after{
+.catalog-click1::before{
+    position: relative;
+    bottom: 25px;
+    right: -45px;
     content: "";
-    position: absolute;
-    top: -16px;
-    left: 9.5%;
     border-width: 8px;
     border-style: solid;
     border-color: transparent transparent #292929 transparent;
@@ -241,6 +247,37 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .active, .dot:hover{
     opacity: 1;
+}
+
+/*设置a的定位，给我们自己编写的下划线一个定位参考*/
+.left-to-right{
+     position:relative;
+}
+/*使用伪类给a下面添加下划线*/
+/*css3为了区别伪类选择器把::改为:,使用:也会自动转为::*/
+.left-to-right::after{
+     content:'';
+     display:block;
+/*开始时候下划线的宽度为0*/
+     width:0;
+     height:3px;
+     position:absolute;
+     left:0;
+     bottom:-3px;
+     background:#000;
+/*这里我们设定所有改变都有动画效果，可以自己指定样式才有动画效果*/
+     transition:all 0.3s ease-in-out;
+ }
+.left-to-right:hover::after{
+     width:100%;
+ }
+
+/*outfit*/
+
+a{
+    font-style: none;
+    text-decoration: none;
+    color: inherit;
 }
 
 /*Typograohy*/
