--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,p { margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline; background: transparent; }
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,p{ margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline; background: transparent; }
 
 /*Layout*/
 
@@ -39,7 +39,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     position: absolute;
     right: 85px;
     top: 23px;
-    letter-spacing: .5px;
+    letter-spacing: 0.5px;
 }
 
 .menu li{
@@ -105,7 +105,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .filters{
     width: 100px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     margin-left: 107px;
 }
 
@@ -169,7 +169,38 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border-color: transparent transparent #292929 transparent;
 }
 
-.catalog-click1::before{
+.catalog-click2::before{
+    position: relative;
+    bottom: 25px;
+    right: -35px;
+    content: "";
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent transparent #292929 transparent;
+}
+
+.catalog-click3::before{
+    position: relative;
+    bottom: 25px;
+    right: -30px;
+    content: "";
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent transparent #292929 transparent;
+}
+
+.catalog-click4::before{
+    position: relative;
+    bottom: 25px;
+    right: -25px;
+    content: "";
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent transparent #292929 transparent;
+}
+
+
+.catalog-click5::before{
     position: relative;
     bottom: 25px;
     right: -45px;
