--- a/css/detailstylesheet.css
+++ b/css/detailstylesheet.css
@@ -1,19 +1,20 @@
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,p{ margin: 0; padding: 0; border: 0; outline: 0; font-size: 100%; vertical-align: baseline; background: transparent; }
 
 
+/*General */
+
+*{
+    color: #292929;
+}
+
+/* L A Y O U T */
+
 /* Header */ 
 
 header{
     height: 37vh;
     border: 0px 0px 0px 0px;
     border-color: white;
-}
-    
-    /*Layout */
-
-
-*{
-    color: #292929;
 }
 
 .logo{
@@ -102,7 +103,8 @@ header{
 }
 
 .discription-column p{
-    margin-top: 10px;
+    margin-top: 25px;
+    letter-spacing: 0.3px
 }
 
 /* slideshow */
@@ -113,7 +115,7 @@ header{
 }
 
 .draftshow{
-    width: 100vw;
+    width: 100%;
 }
 
 .arrow-left{
@@ -166,6 +168,14 @@ header{
     transform: rotate(-45deg);
 }
 
+.arrow-right:hover{
+    opacity: 1;
+}
+
+.arrow-left:hover{
+    opacity: 1;
+}
+
 .dots{
     position: absolute;
     bottom: 8%;
@@ -204,6 +214,30 @@ header{
 .active, .dot:hover{
     opacity: 1;
 }
+
+/* Showcase */
+
+.showcase{
+    position: relative;
+    margin-top: 800px;
+}
+
+.showcase img{
+    margin-bottom: 50px;
+    margin-left: 12.5vw;
+    width: 75vw;
+}
+
+/*Footer*/
+
+footer{
+    box-sizing: border-box;
+    width: 100%;
+    height: 300px;
+    background-color: #F7F7F7;
+}
+
+
 
 /* Link */
 
