--- a/css/detailstylesheet.css
+++ b/css/detailstylesheet.css
@@ -116,6 +116,8 @@ header{
 
 .draftshow{
     width: 100%;
+    max-height: 500px;
+    overflow: hidden;
 }
 
 .arrow-left{
@@ -275,14 +277,14 @@ footer{
 }
 
 .random-project{
-    width: 23vw;
+    width:  13vw;
     float: left;
     margin-left: 1vw;
     margin-right: 1vw;
 }
 
 .random-project img{
-    width: 23vw;
+    width: 13vw;
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
@@ -354,7 +356,7 @@ h4{
     text-transform: uppercase;
     font-family: 'raleway', sans-serif;
     font-weight: 400;
-    font-size: 9px;
+    font-size: 12px;
     letter-spacing: 5px;
 }
 
