--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,17 +47,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     margin-right: -200px;
     line-height: 25px;
     font-family: 'raleway', sans-serif;
-    font-size: 12px;
+    font-size: 13px;
     padding: 0 10px 0 10px;
     list-style: none;
 }
 
 .menu li a{
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .menu li.now{
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .split-slideshow{
@@ -70,6 +70,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .slideshow{
     position: absolute;
     z-index: -2;
+    -moz-z-index: -2;
+    -webkit-z-index: -2;
+    -o-z-index: -2;
+    -ms-z-index: -2;
     top: 0px;
     left: 0px;
     box-sizing: border-box;
@@ -85,11 +89,19 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .project{
     position:relative;
     z-index: -1;
+    -moz-z-index: -1;
+    -webkit-z-index: -1;
+    -o-z-index: -1;
+    -ms-z-index: -1;
 }
 
 .homeimg{
     position: absolute;
-    z-index: 100;
+    z-index: 999;
+    -moz-z-index: 999;
+    -webkit-z-index: 999;
+    -o-z-index: 999;
+    -ms-z-index: 999;
     right: 50%;
     top: 50%;
     margin-right: -18%;
@@ -124,6 +136,10 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 .text{
     position: relative;
     z-index: 99;
+    -moz-z-index: 99;
+    -webkit-z-index: 99;
+    -o-z-index: 99;
+    -ms-z-index: 99;
     line-height: 100vh;
     margin-top:-85px;
 }
@@ -161,7 +177,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .catalog-click::before{
     position: relative;
-    bottom: 25px;
+    bottom: 23px;
     right: -25px;
     content: "";
     border-width: 8px;
@@ -171,8 +187,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .catalog-click2::before{
     position: relative;
-    bottom: 25px;
-    right: -35px;
+    bottom: 23px;
+    right: -28px;
     content: "";
     border-width: 8px;
     border-style: solid;
@@ -181,8 +197,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .catalog-click3::before{
     position: relative;
-    bottom: 25px;
-    right: -30px;
+    bottom: 23px;
+    right: -25px;
     content: "";
     border-width: 8px;
     border-style: solid;
@@ -191,8 +207,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .catalog-click4::before{
     position: relative;
-    bottom: 25px;
-    right: -25px;
+    bottom: 23px;
+    right: -22px;
     content: "";
     border-width: 8px;
     border-style: solid;
@@ -202,8 +218,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .catalog-click5::before{
     position: relative;
-    bottom: 25px;
-    right: -28px;
+    bottom: 23px;
+    right: -22px;
     content: "";
     border-width: 8px;
     border-style: solid;
@@ -349,6 +365,6 @@ h6{
     text-transform: uppercase;
     font-family: 'raleway', sans-serif;
     font-size: 12px;
-    font-weight: 200;
+    font-weight: 400;
     letter-spacing: 10px;
 }
