--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -18,7 +18,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     -moz-transform: rotate(-90deg);
     -webkit-transform: rotate(-90deg);
     -0-transform: rotate(-90deg);
-    
 }
 
 .menu-icon{
@@ -404,16 +403,39 @@ h6{
 
 /*mobile*/
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 960px) and (min-height:640px){
     
-.split-slideshow{
+    .menu-icon{
+        visibility: hidden;
+    }
+    
+    .menu{
+        visibility: hidden;
+    }
+    
+    .name{
+    position: fixed;
+    top: 32px;
+    left: auto;
+    right: 30px;
+    height: 30px;
+    transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -0-transform: rotate(0deg);
+    font-weight: 600;
+    
+}
+    
+    .split-slideshow{
     position: absolute;
     width: 100vw;
     height: 100vh;
     z-index: -999;
 }
 
-.slideshow{
+    .slideshow{
     position: absolute;
     z-index: -2;
     -moz-z-index: -2;
@@ -428,13 +450,13 @@ h6{
     overflow: hidden;
 }
 
-.project{
+    .project{
     z-index: 998;
     position:relative;
     transform: translateZ(50px);
 }
 
-.homeimg{
+    .homeimg{
     position: absolute;
     z-index: 999;
     -moz-z-index: 999;
@@ -442,47 +464,33 @@ h6{
     -o-z-index: 999;
     -ms-z-index: 999;
     right: 50%;
-    top: 50%;
-    margin-right: -28%;
+    top: 40%;
+    margin-right: -29%;
     margin-top: -20%;
     width: 58%;
     transform: translateZ(100px);
 }
     
-.text{
+    .text{
     position: relative;
     z-index: 99;
     -moz-z-index: 99;
     -webkit-z-index: 99;
     -o-z-index: 99;
     -ms-z-index: 99;
-    padding-top: 50vh;
-    line-height: 50vh;
+    padding-top: 35vh;
+    line-height: 65vh;
+    margin-top: 0px;
 }
     
-.slideshow-text{
+    .slideshow-text{
     visibility: hidden;
     margin-top: 100px;
     width: 200px;
     transform: (-50%, -50%);
 }
-    
-.name{
-    position: absolute;
-    top: 32px;
-    left: 50%;
-    height: 30px;
-    margin-left: -60px;
-    transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -0-transform: rotate(0deg);
-    font-weight: 600;
-    
-}
    
-.arrow-left-box{
+    .arrow-left-box{
     position: absolute;
     left: 0px;
     bottom: 50vh;
@@ -491,7 +499,7 @@ h6{
     border: transparent;
 }
 
-.arrow-right-box{
+    .arrow-right-box{
     position: absolute;
     right: 0px;
     bottom: 50vh;
@@ -500,7 +508,7 @@ h6{
     border: transparent;
 }
 
-.arrow-left{
+    .arrow-left{
     position: absolute;
     box-sizing: border-box;
     top: 35px;
@@ -512,7 +520,7 @@ h6{
     border-color: transparent  #292929 transparent transparent;
 }
 
-.arrow-right{
+    .arrow-right{
     position: absolute;
     top: 35px;
     right: 20px;
@@ -524,33 +532,33 @@ h6{
     border-color: transparent transparent transparent #292929;
 }
     
-.arrow-left-box:hover{ 
+    .arrow-left-box:hover{ 
     left: 0px;   
     transform: none;
 }
 
-.arrow-right-box:hover{
+    .arrow-right-box:hover{
     right: 0px;   
     transform: none;
 }
 
-#indexdots{
+    #indexdots{
     position: absolute;
-    bottom: 125px;
+    bottom: 95px;
     left: 50%;
     margin-left: -54px;
 }
 
-.dots{
-    
+    .dots{
     position: absolute;
-    bottom: 125px;
+    bottom: 95px;
     left: 50%;
     margin-left: -24px;
 }
     
-.catalog{
+    .catalog{
     position: absolute;
+    background-color: white;
     bottom: 0px;
     width: 100vw;
     border-left: 0px solid transparent;
@@ -558,11 +566,11 @@ h6{
     box-sizing: border-box;
 }
 
-.catalog li{
+    .catalog li{
     color: white;
     font-family: 'raleway', sans-serif;
     font-size: 10px;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 60px;
     background-color: #292929;
     border-right: 5px solid white;
@@ -574,7 +582,197 @@ h6{
     float: left;
 }
 
-.catalog .catalog-element1, .catalog .catalog-element2, .catalog .catalog-element3, .catalog .catalog-element4{
+    .catalog .catalog-element1, .catalog .catalog-element2, .catalog .catalog-element3, .catalog .catalog-element4{
+    line-height: 60px;
+    color: withe;
+    opacity: .07;
+}  
+}
+
+/*pad*/
+
+/*mobile*/
+
+@media screen and (max-width: 960px) and (max-height:640px){
+    
+    .menu-icon{
+        visibility: hidden;
+    }
+    
+    .menu{
+        visibility: hidden;
+    }
+    
+    .name{
+    position: fixed;
+    top: 32px;
+    left: auto;
+    right: 30px;
+    height: 30px;
+    transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -0-transform: rotate(0deg);
+    font-weight: 600;
+    
+}
+    
+    .split-slideshow{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: -999;
+}
+
+    .slideshow{
+    position: absolute;
+    z-index: -2;
+    -moz-z-index: -2;
+    -webkit-z-index: -2;
+    -o-z-index: -2;
+    -ms-z-index: -2;
+    top: 0px;
+    left: 0px;
+    border: 0px solid transparent;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+    .project{
+    z-index: 998;
+    position:relative;
+    transform: translateZ(50px);
+}
+
+    .homeimg{
+    position: absolute;
+    z-index: 999;
+    -moz-z-index: 999;
+    -webkit-z-index: 999;
+    -o-z-index: 999;
+    -ms-z-index: 999;
+    right: 50%;
+    margin-right: -15%;
+    width: 30%;
+    transform: translateZ(100px);
+}
+    
+    .text{
+    position: relative;
+    z-index: 99;
+    -moz-z-index: 99;
+    -webkit-z-index: 99;
+    -o-z-index: 99;
+    -ms-z-index: 99;
+    line-height: 95vh;
+    padding-bottom: 5vh;
+    margin-top: 0px;
+}
+    
+    .slideshow-text{
+    visibility: hidden;
+    margin-top: 100px;
+    width: 200px;
+    transform: (-50%, -50%);
+}
+   
+    .arrow-left-box{
+    position: absolute;
+    left: 0px;
+    bottom: 50vh;
+    margin-bottom: -25px;
+    width: 100px;
+    height: 100px;
+    border: transparent;
+}
+
+    .arrow-right-box{
+    position: absolute;
+    right: 0px;
+    bottom: 50vh;
+    width: 100px;
+    height: 100px;
+    margin-bottom: -25px;
+    border: transparent;
+}
+
+    .arrow-left{
+    position: absolute;
+    box-sizing: border-box;
+    top: 35px;
+    left: 20px;
+    width: 0;
+    height: 0;
+    border-width: 15px;
+    border-style: solid;
+    border-color: transparent  #292929 transparent transparent;
+}
+
+    .arrow-right{
+    position: absolute;
+    top: 35px;
+    right: 20px;
+    box-sizing: border-box;
+    width: 0;
+    height: 0;
+    border-width: 15px;
+    border-style: solid;
+    border-color: transparent transparent transparent #292929;
+}
+    
+    .arrow-left-box:hover{ 
+    left: 0px;   
+    transform: none;
+}
+
+    .arrow-right-box:hover{
+    right: 0px;   
+    transform: none;
+}
+
+    #indexdots{
+    position: absolute;
+    bottom: 95px;
+    left: 50%;
+    margin-left: -54px;
+}
+
+    .dots{
+    position: absolute;
+    bottom: 95px;
+    left: 50%;
+    margin-left: -24px;
+}
+    
+    .catalog{
+    position: absolute;
+    background-color: white;
+    bottom: 0px;
+    width: 100vw;
+    border-left: 0px solid transparent;
+    border-right: 0px solid transparent;
+    box-sizing: border-box;
+}
+
+    .catalog li{
+    color: white;
+    font-family: 'raleway', sans-serif;
+    font-size: 10px;
+    font-weight: 700;
+    line-height: 60px;
+    background-color: #292929;
+    border-right: 5px solid white;
+    border-left: 5px solid white;
+    text-align: center;
+    list-style: none;
+    box-sizing: border-box;
+    width: 20%;
+    float: left;
+}
+
+    .catalog .catalog-element1, .catalog .catalog-element2, .catalog .catalog-element3, .catalog .catalog-element4{
     line-height: 60px;
     color: withe;
     opacity: .07;
