--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -414,7 +414,7 @@ h6{
     }
     
     .name{
-    position: fixed;
+    position: absolute;
     top: 32px;
     left: auto;
     right: 30px;
@@ -569,7 +569,7 @@ h6{
     .catalog li{
     color: white;
     font-family: 'raleway', sans-serif;
-    font-size: 10px;
+    font-size: 9px;
     font-weight: 700;
     line-height: 60px;
     background-color: #292929;
@@ -604,7 +604,7 @@ h6{
     }
     
     .name{
-    position: fixed;
+    position: ab;
     top: 32px;
     left: auto;
     right: 30px;
@@ -759,7 +759,7 @@ h6{
     .catalog li{
     color: white;
     font-family: 'raleway', sans-serif;
-    font-size: 10px;
+    font-size: 9px;
     font-weight: 700;
     line-height: 60px;
     background-color: #292929;
@@ -776,7 +776,8 @@ h6{
     line-height: 60px;
     color: withe;
     opacity: .07;
-}  
+}
+
 }
 
 /*iphone*/
