--- a/css/detailstylesheet.css
+++ b/css/detailstylesheet.css
@@ -75,7 +75,7 @@ header{
 
 .title{
     padding-left: 1.5vw;
-    font-size: 15vh;
+    font-size: 9vw;
     letter-spacing: 3vw;
     padding-top: 16vh;
     text-align: center;
